...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <state key="normal" title="Preventing Complications"/>
                                        <connections>
                                            <segue destination="9Pn-1G-4aQ" kind="modal" id="RdZ-Uk-wVi"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <state key="normal" title="Sick Days"/>
                                        <connections>
                                            <segue destination="AgF-PH-JnS" kind="modal" id="HbX-yd-JZM"/>
...
                                            <constraint firstAttribute="width" constant="76" id="HWY-L1-czV"/>
                                        </constraints>
                                        <state key="normal" title="Main Menu"/>
                                        <connections>
                                            <action selector="onMainMenuPress:" destination="YIo-SV-9eK" eventType="touchUpInside" id="FsN-n8-vdB"/>
                                        </connections>
                                    </button>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Complications" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="WTC-d4-IZ3">
                                        <rect key="frame" x="242" y="0.0" width="285" height="75"/>
                                        <color key="backgroundColor" red="1" green="0.85425327070000001" blue="0.24901533100000001" alpha="1" colorSpace="calibratedRGB"/>
...
        <scene sceneID="kSq-VJ-K8Z">
            <objects>
                <viewController storyboardIdentifier="EyesInfo" title="Eyes" automaticallyAdjustsScrollViewInsets="NO" definesPresentationContext="YES" modalTransitionStyle="crossDissolve" id="OkI-2i-isx" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="AtP-BJ-wtF"/>
...
        <scene sceneID="CLT-0r-fd7">
            <objects>
                <viewController storyboardIdentifier="Feet Info" title="Feet" automaticallyAdjustsScrollViewInsets="NO" definesPresentationContext="YES" modalTransitionStyle="crossDissolve" id="8wT-Zu-w3o" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="7DI-zV-x87"/>
...
        <scene sceneID="J7Q-kd-E76">
            <objects>
                <viewController storyboardIdentifier="StomachInfo" title="Stomach" automaticallyAdjustsScrollViewInsets="NO" definesPresentationContext="YES" modalTransitionStyle="crossDissolve" id="I1c-Sd-F1m" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="z7o-MC-1jx"/>
...
        <scene sceneID="mbv-Q3-hct">
            <objects>
                <viewController storyboardIdentifier="SkinInfo" title="Skin" automaticallyAdjustsScrollViewInsets="NO" definesPresentationContext="YES" modalTransitionStyle="crossDissolve" id="Ml7-XO-xfX" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="s71-zY-ejK"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shoes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcv-7J-7dO">
                                <rect key="frame" x="62" y="0.0" width="194" height="86"/>
                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
...
