...
                                        <rect key="frame" x="192" y="133" width="385" height="230"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="230" id="bro-ca-Giy"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <state key="normal" title="General Tips"/>
                                        <connections>
                                            <segue destination="Wd4-F2-eLW" kind="modal" id="kLn-Dn-a7x"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dj8-Ms-0wk">
                                        <rect key="frame" x="192" y="457" width="385" height="230"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="230" id="rg0-vq-huf"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <state key="normal" title="Carb Counting"/>
                                        <connections>
                                            <segue destination="bLo-OU-SL1" kind="modal" id="kbI-rr-9il"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
